--- a/src/@fuse/components/navigation/vertical/styles/appearances/thin.scss
+++ b/src/@fuse/components/navigation/vertical/styles/appearances/thin.scss
@@ -95,3 +95,15 @@ fuse-vertical-navigation {
         }
     }
 }
+.ng-star-inserted{
+.sidenav-section{
+    background-color: #01671B;
+    .ng-tns-c62-1{
+    .fuse-vertical-navigation-item-wrapper{
+        .fuse-vertical-navigation-item-active{
+            background-color: #038C26;
+        }
+    }
+}
+}
+}
