--- a/src/@fuse/components/navigation/vertical/vertical.component.html
+++ b/src/@fuse/components/navigation/vertical/vertical.component.html
@@ -1,4 +1,4 @@
-<div class="fuse-vertical-navigation-wrapper">
+<div class="fuse-vertical-navigation-wrapper sidenav-section">
 
     <!-- Header -->
     <div class="fuse-vertical-navigation-header">
