--- a/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
+++ b/src/app/modules/ndc-requests/search-ndc-list/search-ndc-list.component.html
@@ -1,23 +1,89 @@
-<div>
-    <div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-        <div class="text-4xl font-extrabold tracking-tight">NDC Search List</div>
+<!--<div style="flex-direction: row"-->
+<!--     class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">-->
+<!--    <div class="text-4xl font-extrabold tracking-tight">NDC Search List</div>-->
+<!--    <mat-form-field appearance="outline">-->
+<!--        <input matInput placeholder="Search" autocomplete="off" appearance="outline" #cnic>-->
+<!--    </mat-form-field>-->
+<!--    <button mat-raised-button color="primary" class="btn btn-primary" (click)="findCnic(cnic)">Find</button>-->
+<!--    <a color="primary">Get All</a>-->
+<!--</div>-->
+<!--<div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">-->
+<!--    <div class="example-table-container">-->
+<!--
+<!       <div class="mat-table__message" *ngIf="!loading && pending_requests_data_source.data?.length==0">No-->
+<!--            records-->
+<!--            found-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Message for empty data  &ndash;&gt;-->
+<!--        <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
+<!--    </div>-->
 
-        <!-- Header -->
-        <div
-            class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
-            style="flex-wrap: wrap">
+
+<!--</div>-->
+<!--<div class="text-4xl font-extrabold tracking-tight">NDCs Pending for Approval</div>-->
+<!--<div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">-->
+
+<!--    <div class="example-table-container">-->
+
+<!--        <mat-table-->
+<!--            [dataSource]="pending_requests_data_source">-->
+<!--            <ng-container matColumnDef="customer_cnic">-->
+<!--                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC-->
+<!--                </mat-header-cell>-->
+<!--                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span>-->
+<!--                </mat-cell>-->
+<!--            </ng-container>-->
+<!--            <ng-container matColumnDef="customer_name">-->
+<!--                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>-->
+<!--                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span>-->
+<!--                </mat-cell>-->
+<!--            </ng-container>-->
+
+<!--            <ng-container matColumnDef="request_on">-->
+<!--                <mat-header-cell [style.min-width]="" *matHeaderCellDef>Request On</mat-header-cell>-->
+<!--                <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span>-->
+<!--                </mat-cell>-->
+<!--            </ng-container>-->
+<!--            <mat-header-row *matHeaderRowDef="pending_ndc_requests_displayed_columns;sticky:true;"-->
+<!--                            class="table-header-background"></mat-header-row>-->
+
+<!--            <mat-row *matRowDef="let request; columns: pending_ndc_requests_displayed_columns"></mat-row>-->
+<!--        </mat-table>-->
+<!--        <div class="mat-table__message" *ngIf="!loading && pending_requests_data_source.data?.length==0">No-->
+<!--            records-->
+<!--            found-->
+<!--        </div>-->
+<!--        &lt;!&ndash; Message for empty data  &ndash;&gt;-->
+<!--        <div class="mat-table__message" *ngIf="loading">Please wait....</div>-->
+<!--    </div>-->
+<!--        <div class="mat-table__bottom">-->
+<!--            <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>-->
+<!--            <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50]"></mat-paginator>-->
+<!--        </div>-->
+<!--    </div>-->
+
+
+<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight">NDC Search List</div>
+
+    <!-- Header -->
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+         style="flex-wrap: wrap">
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
             <mat-form-field appearance="outline">
                 <input matInput placeholder="Search" autocomplete="off" appearance="outline" #cnic>
             </mat-form-field>
+        </div>
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
             <button mat-raised-button color="primary" class="btn btn-primary" (click)="findCnic(cnic)">Find</button>
             <a color="primary">Get All</a>
-
         </div>
-
-        <div class="mat-table__wrapper mat-elevation-z8" [style.maxHeight]="gridHeight">
-            <mat-table class="lmat-elevation-z8"
-                       [dataSource]="request_data_source">
+    </div>
+    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+        <div class="example-table-container">
+            <mat-table
+                [dataSource]="request_data_source">
                 <ng-container matColumnDef="serialNumber">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Sr.</mat-header-cell>
                     <mat-cell [style.min-width]="" *matCellDef="let request">{{request.NDCId}}</mat-cell>
@@ -25,7 +91,8 @@
                 <ng-container matColumnDef="customer_cnic">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
                     </mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span></mat-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Cnic}}</span>
+                    </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="name">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
@@ -35,7 +102,8 @@
 
                 <ng-container matColumnDef="current_status">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Current Status</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Status}}</span></mat-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.Status}}</span>
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="last_status">
@@ -75,9 +143,7 @@
 
                 <mat-row *matRowDef="let request; columns: ndc_requests_displayed_columns"></mat-row>
             </mat-table>
-            <div class="mat-table__message" *ngIf="!loading && pending_requests_data_source.data?.length==0">No records
-                found
-            </div>
+            <div class="mat-table__message" *ngIf="!loading && request_data_source.data?.length==0">No records found</div>
             <!-- Message for empty data  -->
             <div class="mat-table__message" *ngIf="loading">Please wait....</div>
         </div>
@@ -86,23 +152,13 @@
             <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50]"></mat-paginator>
         </div>
 
+    </div>
 
 
-
-        <div class="text-4xl font-extrabold tracking-tight">NDCs Pending for Approval</div>
-        <br>
-        <br>
-
-
-
-
-
-
-
-
-
-        <div class="mat-table__wrapper mat-elevation-z8" [style.maxHeight]="gridHeight">
-            <mat-table class="lmat-elevation-z8"
+    <div class="flex flex-auto" style="flex-direction: column;overflow-y: scroll">
+        <div class="text-4xl font-extrabold tracking-tight">Pending NDC List</div>
+        <div class="example-table-container">
+            <mat-table
                        [dataSource]="pending_requests_data_source">
                 <ng-container matColumnDef="customer_cnic">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer CNIC
@@ -111,34 +167,30 @@
                 </ng-container>
                 <ng-container matColumnDef="customer_name">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Customer Name</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span></mat-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CustomerName}}</span>
+                    </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="request_on">
                     <mat-header-cell [style.min-width]="" *matHeaderCellDef>Request On</mat-header-cell>
-                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span></mat-cell>
+                    <mat-cell [style.min-width]="" *matCellDef="let request"><span>{{request.CreatedOn}}</span>
+                    </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="pending_ndc_requests_displayed_columns;sticky:true;"
                                 class="table-header-background"></mat-header-row>
 
                 <mat-row *matRowDef="let request; columns: pending_ndc_requests_displayed_columns"></mat-row>
             </mat-table>
-            <div class="mat-table__message" *ngIf="!loading && pending_requests_data_source.data?.length==0">No records
-                found
-            </div>
-            <!-- Message for empty data  -->
-            <div class="mat-table__message" *ngIf="loading">Please wait....</div>
+
         </div>
-        <div class="mat-table__bottom">
-            <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
-            <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50]"></mat-paginator>
-        </div>
+
+
     </div>
-
+    <div class="mat-table__bottom">
+        <mat-spinner [diameter]="20" *ngIf="loading"></mat-spinner>
+        <mat-paginator [length]="15" [pageSize]="15" [pageSizeOptions]="[15, 30, 50]"></mat-paginator>
+    </div>
 </div>
-
-
-
 
 
 
