--- a/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
+++ b/src/app/modules/geo-fencing/geo-fencing-list/geo-fencing-list.component.html
@@ -1,4 +1,5 @@
-<div class=" px-6 pt-2 overflow-scroll sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
+<div class=" px-6 pt-2 overflow-scroll sm:absolute sm:inset-0 flex
+flex-col flex-auto min-w-0  bg-card dark:bg-transparent">
     <div class="text-4xl font-extrabold tracking-tight">List Geo Fencing</div>
 
     <!-- Header -->
