--- a/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
+++ b/src/app/shared/crud/alert-dialog-success/alert-dialog-success.component.html
@@ -5,7 +5,7 @@
       <div class="form-group">
 
         <div class="col-lg-12 text-center mt-1">
-          <img src="./assets/media/icons/checked-01.png" class="img-responsive center-block" alt="icon" />
+          <img src="./assets/media/icons/checked-01.png" class="img-responsive center-block w-32 mx-auto" alt="icon" />
         </div>
 
         <div class="col-lg-12 text-center mt-5" *ngIf="data.code">
