--- a/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
+++ b/src/app/modules/loan-utilization/search-loan-uti/search-loan-uti.component.html
@@ -59,6 +59,20 @@
                 </mat-form-field>
             </div>
 
+<!--            <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
+
+<!--                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
+<!--                    <mat-label class="customMatLabel">Circle</mat-label>-->
+
+<!--                    <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">-->
+<!--                        <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"-->
+<!--                        >-->
+<!--                            {{circle?.CircleCode}}-->
+<!--                        </mat-option>-->
+<!--                    </mat-select>-->
+<!--                </mat-form-field>-->
+<!--            </div>-->
+
 
 <!--            <div class="col-md-2 kt-margin-bottom-10-mobile mr-4" *ngIf="!isUserAdmin && !isZoneUser">-->
 <!--                <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
