--- a/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
+++ b/src/app/modules/loan-utilization/search-utilization/search-utilization.component.html
@@ -4,72 +4,78 @@
   <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between pt-4 px-6 md:px-8"
     [formGroup]="loanutilizationSearch">
     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-      <div class="col-md-2 kt-margin-bottom-10-mobile" *ngIf="!isUserAdmin && isMCO && !isBM">
-        <mat-form-field class="mat-form-field-fluid" appearance="outline">
-          <mat-label>Zone</mat-label>
-          <input matInput formControlName="Zone" readonly="readonly" maxlength="30" autocomplete="off">
-        </mat-form-field>
-      </div>
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
 
-      <div class="col-md-2 kt-margin-bottom-10-mobile mr-20" *ngIf="isUserAdmin">
-        <mat-form-field class="mat-form-field-fluid map-fields" appearance="outline" *ngIf="!BMUser">
-          <mat-label>Zone</mat-label>
-          <mat-select (selectionChange)="GetBranches($event)" formControlName="ZoneId">
-            <mat-option>
-              <ngx-mat-select-search placeholderLabel="Search Zone..." (focusout)="validateZoneOnFocusOut()"
-                (keyup)="searchZone($event.target.value)" noEntriesFoundLabel="No Zone Found">
-              </ngx-mat-select-search>
-            </mat-option>
-            <mat-option>
-              Select
-            </mat-option>
-            <mat-option *ngFor="let zone of SelectedZones" [value]="zone.ZoneId">
-              {{zone.ZoneName }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-
-      <div class="col-md-2 kt-margin-bottom-10-mobile mr-20" *ngIf="!isUserAdmin && !isZoneUser">
-        <mat-form-field class="mat-form-field-fluid" appearance="outline">
-          <mat-label>Branch</mat-label>
-          <input matInput formControlName="Branch" readonly="readonly" maxlength="30" autocomplete="off">
-          <!--  <mat-error *ngIf="hasError('loanutilizationName', 'required')">loanutilizationName <strong>required</strong></mat-error>-->
-        </mat-form-field>
-      </div>
-      <div class="col-md-2 kt-margin-bottom-10-mobile mr-20" *ngIf="isUserAdmin || isZoneUser">
-        <mat-form-field class="mat-form-field-fluid map-fields" appearance="outline" *ngIf="!BMUser">
-          <mat-label>Branch</mat-label>
-          <mat-select (selectionChange)="SetBranches($event)" formControlName="BranchId">
-            <mat-option>
-              <ngx-mat-select-search placeholderLabel="Search Branch..." (focusout)="validateBranchOnFocusOut()"
-                noEntriesFoundLabel="No Branch Found" (keyup)="searchBranch($event.target.value)">
-              </ngx-mat-select-search>
-            </mat-option>
-            <mat-option>
-              Select
-            </mat-option>
-            <mat-option *ngFor="let branch of SelectedBranches" [value]="branch.BranchId">
-              {{branch.Name }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
+                <mat-label class="customMatLabel">Zone</mat-label>
+                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone">
+                    <mat-option [value]="SelectedZones?.ZoneId">
+                        {{SelectedZones?.ZoneName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
+                <mat-label class="customMatLabel">Zone</mat-label>
+                <mat-select [(ngModel)]="selected_z" formControlName="Zone" [disabled]="disable_zone"
+                            (selectionChange)="changeZone($event)">
+                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                                [disabled]="disable_zone">
+                        {{zone?.ZoneName}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
 
 
-      <div *ngIf="circle && isBM" class="col-md-2 kt-margin-bottom-10-mobile mr-20">
-        <mat-form-field class="mat-form-field-fluid" appearance="outline">
-          <mat-label>Circle No</mat-label>
-          <mat-select formControlName="CircleId">
-            <mat-option value="">
-              Select
-            </mat-option>
-            <mat-option *ngFor="let obj of circle" [value]="obj.Id">
-              {{obj.CircleCode}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
+        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
+            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+                <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
+                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                            (selectionChange)="changeBranch($event)"
+                            *ngIf="!single_branch">
+                    <mat-option *ngFor="let branch of SelectedBranches" [value]="branch?.BranchCode"
+                    >
+                        {{branch?.Name}}
+                    </mat-option>
+                </mat-select>
+                <mat-select [(ngModel)]="selected_b" formControlName="Branch" [disabled]="disable_branch"
+                            *ngIf="single_branch">
+                    <mat-option [value]="SelectedBranches?.BranchCode"
+                    >
+                        {{SelectedBranches?.Name}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+
+
+<!--      <div *ngIf="circle && isBM" class="col-md-2 kt-margin-bottom-10-mobile mr-20">-->
+<!--        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
+<!--          <mat-label>Circle No</mat-label>-->
+<!--          <mat-select formControlName="CircleId">-->
+<!--            <mat-option value="">-->
+<!--              Select-->
+<!--            </mat-option>-->
+<!--            <mat-option *ngFor="let obj of circle" [value]="obj.Id">-->
+<!--              {{obj.CircleCode}}-->
+<!--            </mat-option>-->
+<!--          </mat-select>-->
+<!--        </mat-form-field>-->
+<!--      </div>-->
+
+<!--                    <div  class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">-->
+<!--                        {{selected_c}}-->
+<!--                        <mat-form-field class="mat-form-field-fluid" appearance="outline">-->
+<!--                            <mat-label class="customMatLabel">Circle</mat-label>-->
+<!--                            <mat-select [(ngModel)]="selected_c" formControlName="Circle" [disabled]="disable_circle">-->
+<!--                                <mat-option *ngFor="let circle of SelectedCircles" [value]="circle?.Id"-->
+<!--                                >-->
+<!--                                    {{circle?.CircleCode}}-->
+<!--                                </mat-option>-->
+<!--                            </mat-select>-->
+<!--                        </mat-form-field>-->
+<!--                    </div>-->
+
 
       <div class="col-md-2 kt-margin-bottom-10-mobile mr-20">
         <mat-form-field class="mat-form-field-fluid" appearance="outline">
@@ -140,8 +146,7 @@
           <ng-container matColumnDef="Actions">
             <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
             <mat-cell *matCellDef="let loanutilization">
-
-              <button mat-icon-button color="primary" *ngIf="CheckEditStatus(loanutilization)"
+                <button mat-icon-button color="primary" *ngIf="CheckEditStatus(loanutilization)"
                 (click)="editloanutilization(loanutilization)">
                 <mat-icon style="margin-left: 5px;" title="Edit land">edit</mat-icon>
               </button>
@@ -149,7 +154,7 @@
 
               <button mat-icon-button color="primary" *ngIf="CheckViewStatus(loanutilization)"
                 (click)="viewloanutilization(loanutilization)">
-                <mat-icon title="View land">visibility</mat-icon>
+                <mat-icon title="View land">visibility </mat-icon>
               </button>
             </mat-cell>
           </ng-container>
