--- a/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
+++ b/src/app/modules/user-management/users/circle-view-map/circle-view-map.component.html
@@ -1,7 +1,7 @@
-<div class="sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 bg-card dark:bg-transparent">
 
     <!-- Header -->
-    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-8 px-6 md:px-8 border-b"
+    <div class="relative flex flex-col sm:flex-row flex-0 sm:items-center sm:justify-between py-4"
     >
         <div class="text-4xl font-extrabold tracking-tight">View Map</div>
         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4" style="flex-wrap: wrap;
@@ -29,7 +29,7 @@
     <!-- Main -->
 
     <!-- Products list -->
-    <agm-map style="width: 500px;height: 500px"
+    <agm-map  style="width: 500px;height: 500px"
              #gm [zoom]="zoom" [latitude]="lat" [longitude]="lng" [mapTypeControlOptions]="controlOptions"
              [mapTypeControl]="true" (mapReady)="onMapReady($event)" [restriction]="countryRestriction"
              style="height: 500px !important;">
