--- a/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
+++ b/src/app/modules/village-wise-bench-marking/add-update-bench-marking/add-update-bench-marking.component.html
@@ -1,6 +1,6 @@
-<div class=" px-5 py-2 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent container">
-    <div class="text-4xl font-extrabold tracking-tight">Add New Vendor</div>
-    <div class="flex flex-auto" style="flex-direction: row;flex-wrap: wrap;overflow-y: scroll;gap:2%" [formGroup]="addUpdateBenchMarkForm">
+<div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+    <div class="text-4xl font-extrabold tracking-tight px-2">Add New Vendor</div>
+    <div class="flex flex-auto mt-4" style="flex-direction: row;flex-wrap: wrap; overflow-y: scroll;gap:2%" [formGroup]="addUpdateBenchMarkForm">
         
         <div>
 
@@ -135,7 +135,7 @@
 
     </div>
 
-    <div class="mt-2 justify-content-center" >
+    <div class="mt-2 justify-content-end text-right border-t py-4" >
         <button mat-raised-button color="primary" class="mr-4" (click)="Add()">Add</button>
         <button mat-raised-button class="org-button button-red" (click)="clear()">Clear</button>
     </div>
