--- a/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
+++ b/src/app/modules/khaad-seed-vendor/add-new-vendor/add-new-vendor.component.html
@@ -1,32 +1,36 @@
 <div class=" px-10 pt-4 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
-    <div class="text-4xl font-extrabold tracking-tight px-2">Add New Vendor</div>
-    <div class="flex flex-auto" style="flex-direction: row;flex-wrap: wrap;overflow-y: scroll;gap:2%" [formGroup]="vendorForm">
-        
-        <div>
+    <div class="text-4xl font-extrabold tracking-tight px-1">Add New Vendor</div>
+    <div  [formGroup]="vendorForm">
 
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
-                    <mat-option [value]="SelectedZones?.ZoneId">
-                        {{SelectedZones?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline" *ngIf="!single_zone">
-                <mat-label class="customMatLabel">Zone</mat-label>
-                <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
-                            (selectionChange)="changeZone($event)">
-                    <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
-                                [disabled]="disable_zone">
-                        {{zone?.ZoneName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-
+      <div class="row mt-4 ">
+        <div class="col-lg-3 col-sm-12">
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="single_zone">
+            <mat-label class="customMatLabel">Zone</mat-label>
+            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone">
+                <mat-option [value]="SelectedZones?.ZoneId">
+                    {{SelectedZones?.ZoneName}}
+                </mat-option>
+            </mat-select>
+          </mat-form-field>
+          
+          <mat-form-field class="mat-form-field-fluid w-full" appearance="outline" *ngIf="!single_zone">
+            <mat-label class="customMatLabel">Zone</mat-label>
+            <mat-select [(ngModel)]="selected_z" formControlName="ZoneId" [disabled]="disable_zone"
+                        (selectionChange)="changeZone($event)">
+                <mat-option *ngFor="let zone of SelectedZones" [value]="zone?.ZoneId"
+                            [disabled]="disable_zone">
+                    {{zone?.ZoneName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+          
         </div>
 
-        <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+
+        <div class="col-lg-3 col-sm-12">
+
+          <div>
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Branch <strong class="matMandatory">*</strong></mat-label>
                 <mat-select [(ngModel)]="selected_b" formControlName="BranchCode" [disabled]="disable_branch"
                             (selectionChange)="changeBranch($event)"
@@ -46,8 +50,12 @@
             </mat-form-field>
         </div>
 
-        <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        </div>
+
+        <div class="col-lg-3 col-sm-12">
+
+          <div>
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                 <mat-label class="customMatLabel">Circle</mat-label>
 
                 <mat-select formControlName="CircleId" [disabled]="disable_circle">
@@ -58,9 +66,12 @@
                 </mat-select>
             </mat-form-field>
         </div>
+        </div>
 
-        <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+        <div class="col-lg-3 col-sm-12">
+
+          <div>
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
 
               <mat-label class="customMatLabel">Type <strong class="matMandatory">*</strong></mat-label>
               <mat-select formControlName="Type" [disabled]="viewOnly">
@@ -71,22 +82,40 @@
             </mat-form-field>
           </div>
 
+        </div>
+
+
+      </div>
+
+
+      <div class="row">
+
+        <div class="col-lg-3 col-sm-12">
+
           <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Name <strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter Name" formControlName="Name" autocomplete="off" [readonly]="viewOnly" />
             </mat-form-field>
           </div>
 
+        </div>
+
+        <div class="col-lg-3 col-sm-12">
+
           <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Business Description<strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter Business Description" formControlName="Description" autocomplete="off" [readonly]="viewOnly" />
             </mat-form-field>
           </div>
 
+        </div>
+
+        <div class="col-lg-3 col-sm-12 flex">
+
           <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid w-11/12" appearance="outline">
               <mat-label class="customMatLabel">Location<strong class="matMandatory">*</strong></mat-label>
               <input matInput formControlName="Location"  autocomplete="off" readonly="readonly" />
             </mat-form-field>
@@ -97,27 +126,54 @@
             <!-- <button mat-raised-button color="primary" (click)="find()">Find</button> -->
           </div>
 
+
+        </div>
+
+        <div class="col-lg-3 col-sm-12">
+
           <div style="margin-left: 20px;">
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Phone Number <strong class="matMandatory">*</strong></mat-label>
               <input matInput appNumberOnly placeholder="Enter Vendor's Phone Number'" formControlName="PhoneNumber" maxlength="13"  autocomplete="off" [readonly]="viewOnly" />
             </mat-form-field>
           </div>
 
+        </div>
+
+      </div>
+
+
+      <div class="row">
+        <div class="col-lg-3 col-sm-12">
+
           <div>
-            <mat-form-field class="mat-form-field-fluid" appearance="outline">
+            <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
               <mat-label class="customMatLabel">Address <strong class="matMandatory">*</strong></mat-label>
               <input matInput placeholder="Enter Vendor Address" formControlName="Address" autocomplete="off" [readonly]="viewOnly" />
             </mat-form-field>
           </div>
+
+        </div>
+        <div class="col-lg-3 col-sm-12">
+
 
           <div *ngFor="let url of images">
             <img *ngIf="fileExist" style="width:150px;height: 150px; margin-left: auto;margin-right: auto;" class="img-thumbnail text-right" mat-card-md-image [src]="url" (click)="preview()">
           </div>
 
           <div style="align-items: center;">
-            <input *ngIf="!viewOnly" style="margin-left: 10px;margin-right: auto; margin-top: 60px;" id="uploadprofile" type="file" name="myfile" (change)="onFileChange($event)" accept="image/jpg,image/jpeg" />
+            <input *ngIf="!viewOnly" style="margin-left: 10px;margin-right: auto; margin-top: 30px;" id="uploadprofile" type="file" name="myfile" (change)="onFileChange($event)" accept="image/jpg,image/jpeg" />
           </div>
+
+        </div>
+      </div>
+
+
+
+
+
+
+
 
         
     </div>
